# beadsmith

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  INIT.md  NOTICE  ROADMAP.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
.opencode/commands/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md  opsx-sync.md  opsx-update.md
.opencode/skills/openspec-apply-change/: SKILL.md
.opencode/skills/openspec-explore/: SKILL.md
.opencode/skills/openspec-propose/: SKILL.md
.opencode/skills/openspec-update-change/: SKILL.md
apps/mobile/: .gitignore  README.md  l10n.yaml  pubspec.yaml
apps/mobile/android/: .gitignore  RUST_BUILD.md  RUST_BUILD_TODO.md
apps/mobile/integration_test/: engine_on_android_test.dart  engine_on_ios_test.dart  generate_ios_regression_test.dart
apps/mobile/lib/: main.dart
apps/mobile/test/: bead_grid_layout_test.dart  bead_grid_save_test.dart  bead_grid_view_test.dart  crop_geometry_test.dart  generate_lock_test.dart  generate_pattern_test.dart  i18n_coverage_test.dart  i18n_language_switch_test.dart  option_forwarding_test.dart  palette_assets_test.dart  palette_codec_test.dart  palette_selection_test.dart  pattern_engine_test.dart  settings_persistence_test.dart  theme_test.dart
apps/mobile/tool/: gen_placeholder_icon.py
crates/bead-cli/: Cargo.toml
crates/bead-cli/src/: main.rs
crates/bead-cli/tests/: cli.rs  golden.rs
crates/bead-core/: Cargo.toml
crates/bead-core/benches/: bench.rs
crates/bead-core/src/: lib.rs
crates/bead-core/src/cleanup/: mod.rs
crates/bead-core/src/gerstner/: mod.rs
crates/bead-core/src/image/: mod.rs
crates/bead-core/src/image/fixtures/: sample.tiff
crates/bead-core/src/matcher/: mod.rs
crates/bead-core/src/models/: mod.rs
crates/bead-core/src/palette/: mod.rs
crates/bead-core/src/pipeline/: mod.rs
crates/bead-core/src/quantizer/: mod.rs
crates/bead-core/src/renderer/: mod.rs
crates/bead-core/src/statistics/: mod.rs
crates/bead-ffi/: Cargo.toml  flutter_rust_bridge.yaml
crates/bead-ffi/dart/: pubspec.yaml
crates/bead-ffi/dart/lib/src/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
crates/bead-ffi/dart/test/: determinism_gate_test.dart  gen_rich_fixture.py
crates/bead-ffi/scripts/: build-android.sh  build-ios.sh
crates/bead-ffi/src/: api.rs  frb_generated.rs  lib.rs
openspec/: config.yaml
openspec/changes/add-cli-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/add-color-matching/: tasks.md
openspec/changes/add-color-reduction/: design.md  tasks.md
openspec/changes/add-flutter-ffi/: proposal.md  tasks.md
openspec/changes/add-golden-tests/: design.md  proposal.md  tasks.md
openspec/changes/add-mobile-mvp/: proposal.md
openspec/changes/add-palette-loader/: proposal.md  tasks.md
openspec/changes/add-perceptual-matching/: design.md  proposal.md  tasks.md
openspec/changes/add-preview-renderer/: design.md  tasks.md
openspec/changes/add-statistics/: proposal.md  tasks.md
openspec/changes/app-brand-i18n/: proposal.md
openspec/changes/app-palette-selection/: design.md
openspec/changes/bead-despeckle/: design.md  proposal.md
openspec/changes/cli-palette-list/: design.md  tasks.md
openspec/changes/four-screen-restyle/: tasks.md  (+1 more)
palettes/: README.md  artkal_a.json  artkal_r.json  artkal_s.json  hama.json  nabbi.json  perler.json  yant.json
palettes/_unlicensed/: README.md  coco.json  manman.json  mixiaowo.json  panpan.json
tests/golden/: README.md  gerstner_pattern.json  pattern.json  summary.txt
(+166 files in other folders)
