[workspace]
resolver = "2"
members = ["crates/bead-core", "crates/bead-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Shared versions — crates inherit with `<dep>.workspace = true`.
[workspace.dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
