[package]
name = "bead-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "bench"
harness = false
